syntax = "proto3";

package app;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service AppController {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc createEvent(CreateEventRequest) returns (Event) {}
  rpc updateEvent(UpdateEventRequest) returns (Event) {}
  rpc deleteEvent(DeleteEventRequest) returns (google.protobuf.Empty) {}
  rpc findEvent(GetEventRequest) returns (Event) {}
  rpc findEvents(GetEventsRequest) returns (PaginatedEvents) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}


message CreateEventRequest {
  string name = 1;
  string description = 2;
  string when = 3;
  string address = 4;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string first_name = 4;
  string last_name = 5;
  // Profile profile = 7;
  // repeated Event organized = 8;
  // repeated Attendee attended = 9;
}

message UpdateEventRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string when = 4;
  string address = 5;
}

message DeleteEventRequest {
  int32 id = 1;
}

message GetEventRequest {
  int32 id = 1;
}

message GetEventsRequest {
  int32 limit = 1;
  int32 page = 2;
}

message Event {
  int32 id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp when = 4;
  string address = 5;
  int32 organizerId = 6;
  int32 attendeeCount = 7;
  int32 attendeeAccepted = 8;
  int32 attendeeMaybe = 9;
  int32 attendeeRejected = 10;
}

message PaginatedEvents {
  int32 first = 1;
  int32 last = 2;
  int32 limit =3;
  int32 total = 4;
  repeated Event data = 5;
}
